[package]
name = "duckception"
version = "0.0.0"
edition = "2018"

[features]
include_site = []

[dependencies]
headers = "0.3.2"
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
futures = { version = "0.3" }
lazy_static = "1.4.0"
regex = "1.4.1"
uuid = { version = "0.8", features = ["v4"] }
mime_guess = "2.0.3"
tokio-tungstenite = "0.11.0"
futures-util = "0.3.7"

# TODO look into rust-embed for custom Derive Macro which loads files into the rust 
# binary at compile time during release and loads the file from the fs during dev